feture table updated

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Wada | Organic Shop</title>
+  <title>Wada | Online Food Shop</title>
   <meta name="keywords"
     content="ecommerce, online, shop, online shop, organic, online payment, grocery, অনলাইন, ইকমার্স, সপ, দোকান, অনলাইন সপ, অর্গানিক, অর্গানিক সপ" />
   <meta name="description" content="Wada | Organic shop" />
@@ -14,12 +14,12 @@
   <!-- twitter -->
   <meta name="twitter:card" content="Wada" />
   <meta name="twitter:site" content="@ecommerce" />
-  <meta name="twitter:title" content="Wada | Organic Shop" />
+  <meta name="twitter:title" content="Wada | Online Food Shop" />
   <meta name="twitter:description" content="Best and Largest organic shop in dhaka" />
   <meta name="twitter:image" content="https://www.wada.com.bd/assets/images/logo.png" />
 
   <!-- facebook and other social sites -->
-  <meta property="og:title" content="Wada | Organic Sho" />
+  <meta property="og:title" content="Wada | Online Food Shop" />
   <meta property="og:site_name" content="Wada" />
   <meta property="og:description" content="Best and Largest organic shop in dhaka" />
   <meta property="og:type" content="website" />
@@ -60,7 +60,7 @@
 <body>
   <app-root>
     <div class="text">Welcome to</div>
-    <div class="title">Wada.com.bd</div>
+    <div class="title">Wada | Online Food Shop</div>
   </app-root>
 </body>
 
